# web-heat-map

./: .gitignore  README.md  app.py  docker-compose.yml  env  pyproject.toml  requirements.txt  test-data.sql
static/css/: base.css
statics/js/: bigdata.json  bigdata.txt  bigdata1.json  data.geojson  dataarray.geojson
templates/: average.html  base.html  index.html  record.html  table.html
