[tool.poetry]
name = "fastapi-heatmap"
version = "0.1.0"
description = ""
authors = ["cmrd-a <cmrd.a@ya.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
jinja2 = "^2.10"
aiofiles = "^0.4.0"
uvicorn = "^0.10.8"
numpy = "^1.17"
psycopg2 = "^2.8"
fastapi = "^0.45.0"
pypika = "^0.35.18"
asyncpg = "^0.20.0"
python-multipart = "^0.0.5"
buildpg = "^0.2.3"
lxml = "^4.4.2"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
autopep8 = "^1.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"